--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   max-width: 860px;
-  margin: 40px auto;
+  margin: 15px auto;
 }
 button {
   background: none;
@@ -10,7 +10,7 @@ button {
   color: #fff;
   font-weight: bold;
   cursor: pointer;
-  font-size: 1em;
+  font-size: 0.9em;
 }
 
 button:hover {
@@ -19,14 +19,29 @@ button:hover {
 }
 
 .card-grid {
-  margin-top: 40px;
+  margin: 30px 10px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
 }
 
 .status-bar {
+  margin: 10px 10px 0px 10px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 600px) {
+  button {
+    font-size: 0.8em; /* Decrease font size for mobile screens */
+  }
+
+  .status-bar {
+    margin: 10px 15px 0px 15px;
+  }
+
+  .card-grid {
+    margin: 30px 15px;
+  }
 }
